--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "querystring": "^0.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-scripts": "5.0.0",
