--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@splunk/react-icons": "^3.1.0",
+    "@splunk/react-search": "^4.0.1",
     "@splunk/react-ui": "^4.4.1",
     "@splunk/search-job": "^2.0.0",
     "@splunk/splunk-utils": "^2.1.0",
