--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
+    "http-proxy-middleware": "^2.0.3",
     "querystring": "^0.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
