--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@splunk/dashboard-core": "^24.2.0",
     "@splunk/react-icons": "^3.1.0",
     "@splunk/react-search": "^4.0.1",
-    "@splunk/react-ui": "^4.4.1",
+    "@splunk/react-ui": "^4.4.3",
     "@splunk/search-job": "^2.0.0",
     "@splunk/splunk-utils": "^2.1.0",
+    "@splunk/themes": "^0.10.1",
     "@splunk/visualization-context": "^24.0.0",
     "@splunk/visualizations": "^24.0.0",
     "@testing-library/jest-dom": "^5.16.1",
@@ -17,6 +19,7 @@
     "querystring": "^0.2.1",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
+    "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
