--- a/packages/splunk-app-utils-examples/src/main/resources/splunk/default/app.conf
+++ b/packages/splunk-app-utils-examples/src/main/resources/splunk/default/app.conf
@@ -4,11 +4,11 @@ version = 0.1.0
 
 [ui]
 is_visible = 1
-label = SplunkAppUtilsExamples
+label = Splunk Utils Examples
 
 [launcher]
 author = Splunk
-description = SplunkAppUtilsExamples
+description = Splunk Utils Examples
 version = 0.1.0
 
 [package]
