--- a/package.json
+++ b/package.json
@@ -25,6 +25,11 @@
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.2"
   },
+  "resolutions": {
+    "loader-utils": "^2.0.4",
+    "minimatch": "^3.0.5",
+    "nth-check": "2.0.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
